@@ -138,6 +138,9 @@ Bug Fixes
   capabilities (read/write/etc.)  Also works around bugs in the Python io
   module in 2.6+ with regard to file modes. (spacetelescope/PyFITS#33)
 
+- Fixed an obscure issue that can occur on systems that don't have flush to
+  memory-mapped files implemented (namely GNU Hurd). (astropy/astropy#968)
+
 
 3.1.3 (unreleased)
 ------------------
@@ -156,6 +159,9 @@ Bug Fixes
   v3.1.2, but it was only fixed there for compressed image HDUs and not for
   binary tables in general.
 
+- Fixed an obscure issue that can occur on systems that don't have flush to
+  memory-mapped files implemented (namely GNU Hurd). (Backported from 3.2)
+
 
 3.0.12 (unreleased)
 -------------------
@@ -173,6 +179,9 @@ Bug Fixes
   the max array length parameter of the format).  This was thought fixed in
   v3.1.2, but it was only fixed there for compressed image HDUs and not for
   binary tables in general. (Backported from 3.1.3)
+
+- Fixed an obscure issue that can occur on systems that don't have flush to
+  memory-mapped files implemented (namely GNU Hurd). (Backported from 3.2)
 
 
 3.1.2 (2013-04-22)
